week 3 auth added for upcoming week4 project
